
# IntaRNA
- BUGFIX : seed order check was buggy

################################################################################  
################################################################################

240429 Martin Raden
 * IntaRNA/Interaction
   * Seed::operator"<"
     * BUGFIX: less-than check fixed
   + operator<<(Boundary)
 * IntaRNA/PredictorMfe :
   * updateOptima() :
     + no interaction update if "n==0"

################################################################################
### version 3.4.0
################################################################################  

# IntaRNA
- new arguments t|qPfScale for sequence-specific ViennaRNA pf_scale parameter used
  to scale partition functions for ED value computation to avoid overflows
- BUGFIX : when using sequence subset selection in combination with precomputed
  accessibilities from file, wrong accessibilities were loaded for the selected
  sequences
- BUGFIX : seed-extension-based predictions (default prediction mode) were not 
  heeding accessibility constraints
- BUGFIX : query accessibility constraints were applied in reversed indexing

################################################################################  
################################################################################

240124 Martin Raden
 * IntaRNA/AccessibilityConstraint() :
   * AccessibilityConstraint() : 
     * BUGFIX: reversed index ranges were not stored
   * PredictorMfe2dHeuristicSeedExtension :
   * PredictorMfe2dSeedExtension :
   * PredictorMfe2dSeedExtensionRIblast :
   * PredictorMfeEns2sSeedExtension:
     * BUGFIX: missing isAccessible() checks added 

231201 Martin Raden
 * IntaRNA/RNASequence :
   + seqNumber : index of this sequence among its input sequence set. 
     relevant for accessibility loading from file
 * bin/CommandLineParsing : 
   * getFullFilename() : uses RNASequence::seqNumber instead of index within sequence